--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                    
                     <td>
                         <div class="done">
-                        Dont have an account <a href="Register.html">Register Here</a>
+                        Dont have an account <a href="index 1.html">Register Here</a>
                         </div>
                     </td>
                 
