--- a/index 1.html
+++ b/index 1.html
@@ -42,7 +42,7 @@
                   </tr>
                   <tr class="change">
                      <td><input type="submit" name="submit" value="submit"></td>
-                     <td><p>Already a Customer <a href="login.html">Login Here</a></p></td>
+                     <td><p>Already a Customer <a href="index.html">Login Here</a></p></td>
                   </tr>
                 </table>
             </form>
