--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <p>Buy One Get One Freeeee!!!<br>Ready!</p>
              <div class="banner-btn">
                  <a href="#"><span></span>About Us</a>
-                 <a href="Register.html"><span></span>Click to Sign Up</a>
+                 <a href="index 1.html"><span></span>Click to Sign Up</a>
 
              </div>
                 
@@ -79,7 +79,7 @@
             <tr>
                 <td>Username:</td>
                 <td>
-                    <!-- <input type="text" name="user" placeholder="Enter username/Email" required=""> -->
+                 <input type="text" name="user" placeholder="Enter username/Email" required="">
                 </td>
             </tr>
             <tr>
